[package]
name = "joader"
version = "0.1.0"
authors = ["xiejian <jianxie0@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "0.10.0"
tokio = { version = "1.14", features = ["full"] }
rand = "0.8.4"
crossbeam = "0.8.1"
libc = "0.2"
bytes = "1"
prost = "0.8"
prost-types = "0.8"
protobuf = "2"
tonic = "0.5"
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
ctrlc = "3.2.1"
lmdb-zero = "0.4.4"
coz = "0.1"
num-traits = "0.2"
rmp = "^0.8"
rmp-serde = "0.15.5"
image = "0.23.14"
threadpool = "1.0"
lmdb-rkv = "0.14.0"
opencv = "0.61"
cached = "0.34.0"
bitmaps = "3.1.0"
tch = "0.7.0"

[build-dependencies]
tonic-build = "0.5"

[profile.release]
opt-level = 3

[lib]
name = "joader"
